# routes/reviews.js
@@ -1,22 +1,0 @@
-const express = require('express');
-const {
-  getCart,
-  addToCart,
-  removeFromCart,
-  updateCartItem,
-  clearCart,
-} = require('../controllers/cartController');
-const { protect } = require('../middleware/auth');
-
-const router = express.Router();
-
-// All cart routes require authentication
-router.use(protect);
-
-router.get('/', getCart);
-router.post('/add', addToCart);
-router.post('/remove', removeFromCart);
-router.post('/update', updateCartItem);
-router.delete('/clear', clearCart);
-
-module.exports = router;
