# server.js
@@ -15,7 +15,6 @@ const cartRoutes = require('./routes/cart');
 const ratingsRoutes = require('./routes/ratings');
 const commentsRoutes = require('./routes/comments');
 const flagsRoutes = require('./routes/flags');
-const reviewRoutes = require('./routes/reviews');
 const sellersRoutes = require('./routes/sellers');
 const buyersRoutes = require('./routes/buyers');
 const paymentsRoutes = require('./routes/payments');
@@ -57,7 +56,6 @@ app.use('/api/ratings', ratingsRoutes);
 app.use('/api/comments', commentsRoutes);
 app.use('/api/flags', flagsRoutes);
 app.use('/api/orders', orderRoutes);
-app.use('/api/reviews', reviewRoutes);
 app.use('/api/sellers', sellersRoutes);
 app.use('/api/buyers', buyersRoutes);
 app.use('/api/payments', paymentsRoutes);
